--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,6 +26,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Actions</th> <!-- New column for actions -->
           </tr>
         </thead>
         <tbody>
@@ -33,6 +34,12 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <!-- Delete URL form -->
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                </form>
+              </td>
             </tr>
           <% } %>
         </tbody>
