--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,7 +26,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
-            <th scope="col">Actions</th> <!-- New column for actions -->
+            <th scope="col">Actions</th> <!-- Actions column -->
           </tr>
         </thead>
         <tbody>
@@ -35,6 +35,10 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
               <td>
+                <!-- Edit URL form -->
+                <form method="GET" action="/urls/<%= id %>">
+                  <button type="submit" class="btn btn-primary btn-sm">Edit</button>
+                </form>
                 <!-- Delete URL form -->
                 <form method="POST" action="/urls/<%= id %>/delete">
                   <button type="submit" class="btn btn-danger btn-sm">Delete</button>
