--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,9 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
+    <span class="navbar-text">
+      <%= username || "Guest" %>
+    </span>
     <button
       class="navbar-toggler"
       type="button"
