--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,30 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <span class="navbar-text">
-      <%= username || "Guest" %>
-    </span>
+
+    <% if (username && username !== 'Guest') { %>
+      <!-- If the user is logged in, display a welcome message and logout link -->
+      <span class="navbar-text">
+        Welcome, <%= username %>! 
+        <form method="post" action="/logout" class="d-inline">
+          <button type="submit" class="btn btn-link">Logout</button>
+        </form>
+      </span>
+    <% } else { %>
+      <!-- If the user is not logged in, display a login form -->
+      <form method="post" action="/login" class="form-inline">
+        <div class="form-group mb-2">
+          <label for="username" class="sr-only">Username</label>
+          <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+        </div>
+        <div class="form-group mx-sm-3 mb-2">
+          <label for="password" class="sr-only">Password</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Login</button>
+      </form>
+    <% } %>
+
     <button
       class="navbar-toggler"
       type="button"
